<resources>
    <string name="app_name">渔趣</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_add_friends">添加朋友</string>
    <string name="buzuolanhaoren">不做烂好人</string>
    <string name="message">消息</string>
    <string name="friend">联系人</string>
    <string name="map">位置</string>
    <string name="news">新闻</string>
    <string name="Adminator">请输入注册手机号码</string>
    <string name="testpwd">请输入登录密码</string>
    <string name="errorPwd">密码错误</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="set">个人设置</string>
    <string name="menu_code">我的二维码</string>
    <string name="exit">退出登录</string>
    <string name="phone">电话号码</string>
    <string name="editPhone">请输入您的电话号码</string>
    <string name="editname">请输入您的用户名</string>
    <string name="name">用户名</string>
    <string name="editconfirmNum">请再次输入您的密码</string>
    <string name="confirm">确认密码</string>
    <string name="editNum">请输入您的密码</string>
    <string name="pwd">密码</string>
    <string name="about">关于</string>
    <string name="register_now">立即注册</string>
    <string name="location_service">位置服务</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="cancle">取消</string>
    <string name="location">位置</string>
    <string name="location_manager">发现渔场</string>
    <string name="fishing_book">预约</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="sure">确定</string>
    <string name="my_report">我的上报</string>
    <string name="my_mybook">我的订单</string>
    <string name="versioninfo">版本信息</string>
    <string name="latestversion">已是最新版本</string>
    <string name="system">系统信息</string>
    <string name="versionNow">当前版本</string>
    <string name="version">v1.0</string>
    <string name="managerphone">制作人：**</string>
    <string name="havenewversion">有新版本，点击更新</string>
    <string name="mylocation">我的位置</string>
    <string name="mark">标记这里</string>
    <string name="nearby">附近钓场</string>
    <string name="errortips">错误提示：</string>
    <string name="mycontact">我的联系人</string>


    <string name="app_slogon">即时通讯云领导者</string>
    <string name="stop_record">停止录制</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="record_finish_toast">录制完毕，文件存储在%s</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在加载数据</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_not_found">找不到这个群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="join_need_owner_approval">加入公开群需要群主同意</string>
    <string name="blacklist">黑名单列表</string>
    <string name="serach_group_message">消息搜索</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="not_download">未下载:</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="accept_join_group">同意加入群：</string>
    <string name="refuse_join_group">拒绝加入群：</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载: </string>
    <string name="umeng_common_pause_notification_prefix">暂停: </string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="video_call">[视频通话]</string>
    <string name="newcontact">新的朋友</string>
    <string name="updataPwd">修改密码</string>
    <string name="remained">剩余钓位</string>

</resources>
