<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/camera"
        android:textSize="14sp"
        android:textColor="@color/colorTextBlack"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLineGray" />

    <TextView
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/album"
        android:textColor="@color/colorTextBlack"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorLineGray" />

    <TextView
        android:id="@+id/cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/cancle"
        android:textColor="@color/colorTextBlack"
        android:textSize="14sp" />
</LinearLayout>