<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.a32.yuqu.view.TopTitleBar
        android:id="@+id/register_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_toolbar_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_register_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@null"
            android:src="@mipmap/head"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/phone"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="@string/editPhone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingBottom="15dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/colorTextBlack"
                    android:textColorHint="@color/colorTextGray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignBottom="@+id/et_register_phone"
                    android:background="@color/colorLineGray"></View>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/pwd"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_register_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="@string/editNum"
                    android:inputType="numberPassword"
                    android:paddingBottom="15dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/colorTextBlack"
                    android:textColorHint="@color/colorTextGray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignBottom="@+id/et_register_pwd"
                    android:background="@color/colorLineGray"></View>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/confirm"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_register_confirmpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="@string/editconfirmNum"
                    android:inputType="numberPassword"
                    android:paddingBottom="15dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/colorTextBlack"
                    android:textColorHint="@color/colorTextGray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignBottom="@+id/et_register_confirmpwd"
                    android:background="@color/colorLineGray"></View>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/name"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_register_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="@string/editname"
                    android:paddingBottom="15dp"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/colorTextBlack"
                    android:textColorHint="@color/colorTextGray"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/shape_login_button_background"
        android:text="@string/register_now"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />
</LinearLayout>