<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/v_line"
        >
    </FrameLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLineGray"
        android:layout_above="@+id/radiogroup"
        ></View>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rb_news"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/message"
            android:drawableTop="@drawable/selecter_news_radio_btn"
            android:textColor="@drawable/selecter_radio_text"
            android:drawablePadding="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textSize="14sp"
            />
        <RadioButton
            android:id="@+id/rb_frined"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/friend"
            android:drawableTop="@drawable/selecter_friend_radio_btn"
            android:textColor="@drawable/selecter_radio_text"
            android:drawablePadding="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textSize="14sp"
            />
        <RadioButton
            android:id="@+id/rb_where"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/map"
            android:drawableTop="@drawable/selecter_where_radio_btn"
            android:textColor="@drawable/selecter_radio_text"
            android:drawablePadding="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textSize="14sp"
            />
        <RadioButton
            android:id="@+id/rb_dynamic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/news"
            android:drawableTop="@drawable/selecter_dynamic_radio_btn"
            android:textColor="@drawable/selecter_radio_text"
            android:drawablePadding="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textSize="14sp"
            />
    </RadioGroup>

</RelativeLayout>
