<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_toolbar_background"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/where_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:drawablePadding="10dp"
                android:textSize="14sp"
                android:text="@string/location"
                android:drawableTop="@mipmap/locationserver"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/where_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:drawablePadding="10dp"
                android:textSize="14sp"
                android:text="@string/location_manager"
                android:drawableTop="@mipmap/manage"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/where_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:drawablePadding="10dp"
                android:textSize="14sp"
                android:text="@string/fishing_book"
                android:drawableTop="@mipmap/manage"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>